# interprete

./: .gitignore  CMakeLists.txt  Proyecto_secreto_lenguaje_v4.slnx  README.md  ejecutor.h  hola.html
Interprete_Saucito_v4_12-03-2026/: .gitignore  Interprete_Saucito_v4_12-03-2026.cpp  Interprete_Saucito_v4_12-03-2026.vcxproj  Interprete_Saucito_v4_12-03-2026.vcxproj.filters  codigo.sau  lexer.h  parser.h
Interprete_Saucito_v4_12-03-2026/Descargador/: descargador.cpp
Saucito v2-sin IA/: Saucito v2-sin IA.cpp  Saucito v2-sin IA.vcxproj  Saucito v2-sin IA.vcxproj.filters  build.sh  interprete
